--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   webview_flutter: ^3.0.4
   provider: ^6.0.5
   shared_preferences: ^2.2.0
+  google_mobile_ads: ^2.4.0
 
 dev_dependencies:
   flutter_test:
